--- a/app/src/main/res/drawable/as_splash.xml
+++ b/app/src/main/res/drawable/as_splash.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@android:color/white" />
-    <item
-        android:drawable="@drawable/as_slogan"
-        android:gravity="center" />
-    <item
-        android:bottom="16dp"
-        android:drawable="@drawable/as_logo"
-        android:gravity="bottom|center_horizontal" />
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/as_slogan" />
+    </item>
+    <item android:bottom="16dp">
+        <bitmap
+            android:gravity="bottom"
+            android:src="@drawable/as_logo" />
+    </item>
 </layer-list>
+
+<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--<item android:drawable="@android:color/white" />-->
+<!--<item-->
+    <!--android:drawable="@drawable/as_slogan"-->
+    <!--android:gravity="center" />-->
+<!--<item-->
+    <!--android:bottom="16dp"-->
+    <!--android:drawable="@drawable/as_logo"-->
+    <!--android:gravity="bottom|center_horizontal" />-->
+<!--</layer-list>-->
